bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: not found: value isOverMassage
while (isOverMassage()){
       ^BDR:2: error: not found: value readMassage
  if (readMassage()=="R"){
      ^